(WIP) Work on experiment
Changes are generated at correct locations in vsum.tests

Problem with cached URIs

Uncommented teammates test