@@ -22,10 +22,8 @@ public class TeammatesChangeGeneratingTest extends TEAMMATESCITestController {
 
 	@Override
 	protected void saveChanges(Propagation prop, Path rootDirPath) {
-		var layout = new JavaToPcmPropagationDirLayout(this.getDirLayout());
+		var layout = new JavaToPcmPropagationDirLayout(rootDirPath);
 		dirLayouts.add(layout);
-		// TODO Run all Teammates tests and save the Java and PCM changes
-//		new ChangeSaver(this.getRootPath()).saveChanges(prop, true);
 		new ChangeSaver(layout).saveUnresolvedChanges(prop);
 		System.out.println("Changes are saved for: " + prop.getCommitId());
 	}
@@ -33,7 +31,7 @@ public class TeammatesChangeGeneratingTest extends TEAMMATESCITestController {
 //	@Override
 //	protected void setup(boolean overwrite) {
 //	}
-//	
+//
 //	@Override
 //	public void cleanupAfterTest() {
 //	}
@@ -42,24 +40,19 @@ public class TeammatesChangeGeneratingTest extends TEAMMATESCITestController {
 	@Override
 	public void testTeammates() {
 		super.testTeammates();
-
-		dirLayouts
-				.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-1-6484257")));
-		dirLayouts
-				.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-2-48b67ba")));
-		dirLayouts
-				.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-3-83f518e")));
-		dirLayouts
-				.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-4-f33d0bc")));
-		dirLayouts
-				.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-5-ce4463a")));
-
-		var pcmToJavaPropTest = new PcmToJavaChangePropagationTest();
-
-		for (int i = 1; i < dirLayouts.size() - 1; i++) {
-			pcmToJavaPropTest.pcmToJavaChangePropagationTestTemplate(
-					new PcmToJavaChangePropagationDirLayout(dirLayouts.get(i - 1), dirLayouts.get(i),
-							Path.of("target", experimentRootDirNamePrefix + (i - 1) + "-to-" + i).toAbsolutePath()));
-		}
+//
+//		dirLayouts.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-1-6484257")));
+//		dirLayouts.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-2-48b67ba")));
+//		dirLayouts.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-3-83f518e")));
+//		dirLayouts.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-4-f33d0bc")));
+//		dirLayouts.add(new JavaToPcmPropagationDirLayout(Paths.get("target", "TEAMMATESCITest-5-ce4463a")));
+//
+//		var pcmToJavaPropTest = new PcmToJavaChangePropagationTest();
+//
+//		for (int i = 1; i < dirLayouts.size() - 1; i++) {
+//			pcmToJavaPropTest.pcmToJavaChangePropagationTestTemplate(
+//					new PcmToJavaChangePropagationDirLayout(dirLayouts.get(i - 1), dirLayouts.get(i),
+//							Path.of("target", experimentRootDirNamePrefix + (i - 1) + "-to-" + i).toAbsolutePath()));
+//		}
 	}
 }
